test/tests/compiler/18_structures/invalid_parse/plx1_struct_member_any_1.plx
type struc s1(x: any)

pub fn main(none) i32 {
    return 0
}
